--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,35 @@
   </head>
   <body>
     <!--====== Preloader Area Start ======-->
-
+    <div id="netstorm-preloader" class="netstorm-preloader">
+      <!-- Preloader Animation -->
+      <div class="preloader-animation">
+          <!-- Spinner -->
+          <div class="spinner"></div>
+          <p class="fw-5 text-center text-uppercase">Loading</p>
+      </div>
+      <!-- Loader Animation -->
+      <div class="loader-animation">
+          <div class="row h-100">
+              <!-- Single Loader -->
+              <div class="col-3 single-loader p-0">
+                  <div class="loader-bg"></div>
+              </div>
+              <!-- Single Loader -->
+              <div class="col-3 single-loader p-0">
+                  <div class="loader-bg"></div>
+              </div>
+              <!-- Single Loader -->
+              <div class="col-3 single-loader p-0">
+                  <div class="loader-bg"></div>
+              </div>
+              <!-- Single Loader -->
+              <div class="col-3 single-loader p-0">
+                  <div class="loader-bg"></div>
+              </div>
+          </div>
+      </div>
+  </div>
     <!--====== Preloader Area End ======-->
 
     <div class="main">
@@ -85,7 +113,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="" class="nav-link">Contact</a>
+                <a href="#foo" class="nav-link">Contact</a>
               </li>
               <!-- Navbar Action Button -->
               <ul class="navbar-nav action">
@@ -343,7 +371,7 @@
       <!--====== Footer Area Start ======-->
       <footer class="footer-area">
         <!-- Footer Top -->
-        <div class="footer-top">
+        <div class="footer-top" id="foo">
           <div class="container">
             <div class="row">
               <div class="col-12 col-sm-6 col-lg-3 res-margin">
