--- a/client/index.html
+++ b/client/index.html
@@ -139,7 +139,7 @@
       <section class="hero-section">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-md-6 col-lg-7">
+            <div class="col">
               <span>CryptoR</span>
               <h1 class="mt-4">
                 Explore, collect, and sell world's finest NFTs
@@ -154,6 +154,9 @@
                   ><i class="icon-note mr-2"></i>Create</a
                 >
               </div>
+            </div>
+            <div class="col">
+              <img style=" max-height: 500px; border-radius: 15px;" src="./assets/images-icons/cat.gif"/>
             </div>
           </div>
         </div>
