--- a/client/erc-721.html
+++ b/client/erc-721.html
@@ -175,7 +175,7 @@
                   <div class="custom-control custom-switch">
                     <span class="switch-title">For Sale On Market</span>
                     <span class="switch-subtitle">This can always be changed later</span>
-                    <input type="checkbox" checked="checked" class="custom-control-input" id="onSaleSwitch">
+                    <input type="checkbox" class="custom-control-input" id="onSaleSwitch">
                     <label class="custom-control-label" for="onSaleSwitch"></label>
                   </div>
                 </div>
@@ -293,11 +293,11 @@
             </p>
             <!-- Social Icons -->
             <div class="social-icons d-flex">
-              <a class="facebook" href="#">
+              <a class="facebook" href="https://www.facebook.com/CryptoRBharat">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a class="twitter" href="#">
+              <a class="twitter" href="https://medium.com/@Crypto-R">
                 <i class="fab fa-twitter"></i>
                 <i class="fab fa-twitter"></i>
               </a>
@@ -305,7 +305,7 @@
                 <i class="fab fa-google-plus-g"></i>
                 <i class="fab fa-google-plus-g"></i>
               </a>
-              <a class="vine" href="#">
+              <a class="vine" href="https://www.linkedin.com/company/crypto-r">
                 <i class="fab fa-vine"></i>
                 <i class="fab fa-vine"></i>
               </a>
