--- a/client/index.html
+++ b/client/index.html
@@ -390,11 +390,11 @@
                   </p>
                   <!-- Social Icons -->
                   <div class="social-icons d-flex">
-                    <a class="facebook" href="#">
+                    <a class="facebook" href="https://www.facebook.com/CryptoRBharat">
                       <i class="fab fa-facebook-f"></i>
                       <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="twitter" href="#">
+                    <a class="twitter" href="https://medium.com/@Crypto-R">
                       <i class="fab fa-twitter"></i>
                       <i class="fab fa-twitter"></i>
                     </a>
@@ -402,7 +402,7 @@
                       <i class="fab fa-google-plus-g"></i>
                       <i class="fab fa-google-plus-g"></i>
                     </a>
-                    <a class="vine" href="#">
+                    <a class="vine" href="https://www.linkedin.com/company/crypto-r">
                       <i class="fab fa-vine"></i>
                       <i class="fab fa-vine"></i>
                     </a>
