--- a/client/learn.html
+++ b/client/learn.html
@@ -188,7 +188,7 @@
               <div class="card-body">
                 Gas should be considered as a measure of amount required to conduct specific operations on a blockchain. 
                 Blockchains require computational power to execute any transaction. A fee is needed to be paid towards utilization of blockchains resources. 
-                This fee is termed as gas fee. Gas fee on CryptoRNFT.Com is payable in AVAX token.
+                This fee is termed as gas fee. Gas fee on CryptoRNFT.Com is payable in BNB token.
               </div>
             </div>
           </div>
