--- a/client/privacy.html
+++ b/client/privacy.html
@@ -228,7 +228,7 @@ Moralis				https://moralis.io/privacy-policy/<br><br>
 
 Netlify					https://www.netlify.com/privacy	<br><br>
 
-Avalanche				https://www.avax.network/privacy-policy<br><br>
+Avalanche				https://www.BNB.network/privacy-policy<br><br>
 
 Metamask				https://consensys.net/privacy-policy/<br><br>
 
